[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
regex = "1.7.3"
async-trait = "0.1.78"

[dev-dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["json"] }
fake = "=4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
